src/db/mk_inhouse/snapshots/varfish_server_worker__db__mk_inhouse__cli__tests__run_smoke_gts_path.snap
---
source: src/db/mk_inhouse/cli.rs
expression: output
---
#chromosome	begin	chromosome2	end	pe_orientation	sv_type	carriers	carriers_het	carriers_hom	carriers_hemi
1	849998	1	860000	3to5	DEL	1	0	1	0

